# content-ci-cd-template

./: .demisto-sdk-conf  .env  .gitignore  .pre-commit-config_template.yaml  CommonServerPowerShell.ps1  CommonServerPython.py  DemistoClassApiModule.py  README.md  demistomock.ps1   demistomock.py  dev-requirements-py3.txt   package-lock.json  package.json  pyproject.toml  requirements.txt  service_account.json  tox.ini  validation_config.toml  xsoar_config.json
.devcontainer/: Dockerfile  createCerts.sh  devcontainer.json
.github/workflows/: config.yml  upload-artifacts-gs.yml  upload-artifacts-s3.yml  upload-artifacts.yml
.hooks/: bootstrap  pre-commit  update_repo
Packs/AcmeaPhishing/: pack_metadata.json
Packs/CICDExample/: .pack-ignore  pack_metadata.json
Packs/CICDTestPack/: .pack-ignore  README.md  pack_metadata.json
Packs/Demo/: README.md  pack_metadata.json
Packs/Demo2/: README.md  pack_metadata.json
Packs/DemoGozde/: README.md  pack_metadata.json
Packs/Example/: pack_metadata.json
Packs/ExamplePack/: pack_metadata.json
Packs/MyCustom/: pack_metadata.json
Packs/MyFeed/: .secrets-ignore  pack_metadata.json
Packs/MyPhishing/: pack_metadata.json
Packs/MyTeams/: pack_metadata.json
Packs/Nasa-Public-APIs/: pack_metadata.json
Packs/PrintName/: pack_metadata.json
Packs/PushwithPR/: pack_metadata.json
Packs/Test/: pack_metadata.json
Packs/TestPacakage/: pack_metadata.json
Tests/: id_set.json
build_related_scripts/: MarketPlaceInstallerFromCICD.py  bucket_upload.py  bucket_upload_aws.py  bucket_upload_s3.py  get_modified_packs.py
(+89 files in other folders)
