[tool.poetry]
name = "content-ci-cd-template"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8,<3.11"
demisto-sdk = "*"
virtualenv = "^20.25.0"
jsonschema = "^4.21.1"
gsutil = "^5.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
